Gislövs Marknad 31/7 - 2/8 är inställd och Maria Magdalena Marknad 21-22/7 är inställd.

--- a/index.html
+++ b/index.html
@@ -1663,9 +1663,9 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 13-14/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 21-22/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>21-22/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: <del>27-28/6</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 31/7-2/8</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: <del>31/7-2/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 21-22/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 28-29/8</button>
@@ -2104,6 +2104,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Maria Magdalena Marknad, Åhus</h2>
+                                            <p>Marknaden den 21-22/7 är inställd.</p>
                                             <hr class="invis">
                                             <p>Marknaden nystartade 1977 med anor från 1600-talet.</p>
                                         </div>
@@ -2148,6 +2149,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Gislövs Marknad</h2>
+                                            <p>Marknaden den 31/7 - 2/8 är inställd.</p>
                                             <p>Gislövs marknad har ca 30 000 besökare varje år.<br>
                                                 145 knallar är representerade på marknaden.</p>
                                             <hr class="invis">
