Kiviks marknad är inställd. Ljungbyheds marknad är inställd.

--- a/index.html
+++ b/index.html
@@ -1662,12 +1662,12 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & 22/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 13-14/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: <del>13-14/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>21-22/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: <del>27-28/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: <del>31/7-2/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 21-22/8</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: <del>21-22/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 28-29/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: <del>19-21/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: <del>19-21/6</del></button>
@@ -2085,6 +2085,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Kiviks Marknad</h2>
+                                            <p>Marknaden den 13-14 juli är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -2219,6 +2220,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Ljungbyheds Gammelmarknad</h2>
+                                            <p>Marknaden den 21-22/8 är inställd.</p>
                                             <img src="images/ljungbyhed_logo.gif" alt="Ljungbyheds Gammelmarknad logga">
                                             <hr class="invis">
                                             <p>Fredag 16 augusti kl 12.00-20.00<br>
