Ändrade kontaktuppgifter till ljungbyheds marknad, samt fixade datumen för den marknaden

--- a/index.html
+++ b/index.html
@@ -2223,28 +2223,22 @@
                                             <p>Marknaden den 21-22/8 är inställd.</p>
                                             <img src="images/ljungbyhed_logo.gif" alt="Ljungbyheds Gammelmarknad logga">
                                             <hr class="invis">
-                                            <p>Fredag 16 augusti kl 12.00-20.00<br>
-                                                Lördag 17 augusti kl 9.00-18-00</p>
+                                            <p>Fredag 21 augusti kl 12.00-20.00<br>
+                                                Lördag 22 augusti kl 9.00-18-00</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Ljungbyheds Gammelmarknad<br>
-                                                Karbingatan 8<br>
-                                                260 70 Klippan
+                                            <p>LKFF<br>
+                                                Box 33<br>
+                                                264 03 Ljungbyhed
                                             </p>
                                             <hr class="invis">
-                                            <p>Bo Rosengren<br>
-                                                <a href="mailto:bosrosengren@gmail.com">bosrosengren@gmail.com</a><br>
-                                                070-385 14 01<br>
-                                                0435-441 401
-                                            </p>
-                                            <hr class="invis">
-                                            <p>Marknaden<br>
-                                                0704 464 262<br>
-                                                <a href="http://www.ljungbyhed.nu/">www.ljungbyhed.nu</a>
+                                            <p>Jimmy Ahlberg<br>
+                                                <a href="mailto:gammelmarknad@ljungbyhed.nu">gammelmarknad@ljungbyhed.nu</a><br>
+                                                0733-11 74 89
                                             </p>
                                         </div>
                                     </div>
