--- a/index.html
+++ b/index.html
@@ -1653,7 +1653,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & 10-11/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: <del>16/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>3-5/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
@@ -1816,6 +1816,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Åby Marknad, Klippan</h2>
+                                            <p>Marknaden den 16/6 är inställd.</p>
                                             <p>Åby marknad har ca 15 000 besökare varje år. 320 knallar är representerade på marknaden.<br>
                                                 Åby är en trevlig familjemarknad.</p>
                                             <hr class="invis">
