Mikaeli marknad även den 4 oktober

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                 <text x="142" y="328" dx="0,0,0,.3,0,0,0" class="s4">16 juni</text>
                                 <text x="305" y="501" dx="0,0,.3,0,0,0,0,0,0,.3,0,.3,0,0,0" class="s4">5 april, 6 sept</text>
                                 <text x="403" y="268" class="s4">10-12 juli</text>
-                                <text x="180" y="495" dx="0,0,0,0,0,0,.3,0,0,0,0,0,.3,0,.3,0,0" class="s4">16-17 juli, 3 okt</text>
+                                <text x="180" y="495" dx="0,0,0,0,0,0,.3,0,0,0,0,0,.3,0,.3,0,0" class="s4">16-17 juli, 3-4 okt</text>
                                 <text x="188" y="529" dx="0,0,0,0,0,0,.3,0,0,0,0,0,.3,0,0,0,0,0,.3,0,0" class="s4">12-14 juni, 10-11 okt</text>
                                 <text x="358" y="327" dx="0,0,.3,0,0,0,0,0,.3,0,.3,0,0" class="s4">1 juli, 3 okt</text>
                                 <text x="309" y="532" dx="0,0,0,.3,0,0,0" class="s4">16 juli</text>
@@ -1660,7 +1660,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: <del>8-9/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & 22/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3-4/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: <del>13-14/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>21-22/7</del></button>
