--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
                     <div class="col-md-12">
                         <div class="tab-services">
                             <div class="tab clearfix">
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & 6/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & <del>6/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
@@ -1698,7 +1698,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Lövestads Marknad</h2>
-                                            <p>Marknaden den 5/4 är inställd.</p>
+                                            <p>Marknaderna 5/4 och 6/9 är inställda.</p>
                                             <hr class="invis">
                                             <p>En av Skånes äldsta marknader med 10-15000 besökare och 90 knallar per vår och höstmarknad. Det finns både vår- och höstmarknad. Utbudet är varierat. Marknadsplatsen är i centrum.</p>
                                             <hr class="invis">
