Palmfestivalen är inställd

--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: <del>31/7-2/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: <del>21-22/8</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 28-29/8</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: <del>28-29/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: <del>19-21/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: <del>19-21/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: <del>18-19/7</del></button>
@@ -2248,6 +2248,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>PalmFestivalen Trelleborg</h2>
+                                            <p>Marknaden den 28-29/8 är inställd.</p>
                                             <p>PalmFestivalen har ca 75 000 besökare.<br>
                                                 183 knallar, 96 affärsmän och restauranger fyller gatorna med marknadsstånd.<br>
                                                 Familjefest i två dagar.<br>
