Höörs marknad är inställd

--- a/index.html
+++ b/index.html
@@ -1666,7 +1666,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>21-22/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: <del>27-28/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: <del>31/7-2/8</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: <del>8-9/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: <del>21-22/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: <del>28-29/8</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: <del>19-21/6</del></button>
@@ -2188,6 +2188,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Höörs Marknad</h2>
+                                            <p>Marknaden den 8-9/8 är inställd.</p>
                                             <p>Höörs marknad har ca 12-14000 besökare varje år.<br>
                                                 120 knallar är representerade på marknaden.</p>
                                             <hr class="invis">
