--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@
                             <div class="tab clearfix">
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & <del>6/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & 5/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & <del>5/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: <del>16/6</del></button>
@@ -1747,7 +1747,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Broby Marknad</h2>
-                                            <p>Marknaden den 6/6 är inställd.</p>
+                                            <p>Marknaderna de 6/6 och 5/9 är inställda.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
