--- a/index.html
+++ b/index.html
@@ -1659,7 +1659,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: <del>8-9/7</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & 22/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & <del>22/10</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3-4/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: <del>13-14/7</del></button>
@@ -1991,7 +1991,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Tomelilla Marknad</h2>
-                                            <p>Marknaden den 16 Juli 2020 är inställd.</p>
+                                            <p>Marknaderna den 16 Juli och 22 Oktober 2020 är inställda.</p>
                                             <p>Tomelilla marknad har ca 15000 besökare varje år. 200 knallar är representerade på marknaden.</p>
                                             <hr class="invis">
                                             </p>Marknadsplats: Centrum i Tomelilla.</p>
