--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: <del>8-9/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & <del>22/10</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3-4/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & <del>3-4/10</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: <del>13-14/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>21-22/7</del></button>
@@ -2023,7 +2023,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Sjöbo Marknad</h2>
-                                            <p>Marknaden den 16-17/7 är inställd.</p>
+                                            <p>Marknaderna 16-17/7 och 3-4/10 är inställda.</p>
                                             <p>Sjöbo sommarmarknad /Mikaeli marknad har ca 100 000/30 000 besökare varje år vilket gör det till en av Sveriges största marknader.</p>
                                             <hr class="invis">
                                             </p>600/200 knallar är representerade på marknaden, som ligger mitt i centrala Sjöbo.</p>
