Eslövs marknad och Sölvesborgs marknad inställda

--- a/index.html
+++ b/index.html
@@ -1649,13 +1649,13 @@
                         <div class="tab-services">
                             <div class="tab clearfix">
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & <del>6/9</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & <del>26-27/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & <del>5/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: <del>16/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>3-5/7</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & <del>3/10</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: <del>8-9/7</del></button>
@@ -1725,7 +1725,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Eslövs Marknad</h2>
-                                            <p>Marknaden den 30-31/5 är inställd.</p>
+                                            <p>Marknaderna den 30-31/5 samt 26-27/9 är inställda.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -1868,7 +1868,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Sölvesborgs Marknad</h2>
-                                            <p>Marknaden den 1/7 är inställd.</p>
+                                            <p>Marknaderna den 1/7 och 3/10 är inställda.</p>
                                             <p>Marknaden startade kring sekelskiftet år 1900. Marknadsplats är belägen i centrum av Sölvesborg. Det är 200 knallar representerade på sommarmarknaden och ett hundratal på höstmarknaden.</p>
                                             <hr class="invis">
                                             </p>Vägbeskrivning: mot Centrum.</p>
