Skurups marknad 10-11 oktober är inställd

--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & <del>26-27/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & <del>5/9</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & 10-11/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & <del>10-11/10</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: <del>16/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>3-5/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & <del>3/10</del></button>
@@ -1793,7 +1793,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Skurups Marknad</h2>
-                                            <p>Marknaden den 12-14/6 är inställd.</p>
+                                            <p>Marknaderna den 12-14/6 samt 10-11/10 är inställda.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
