Information om 2021 - att man ska kontakta respektive marknadsarrangör.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <h3 class="text-center">För att ni ska få rätt information vad gäller 2021-års marknader ber vi er ta kontakt med respektive marknadsarrangör.
+                        </h3>
+                    </div>
+                    <div>
+                        <h3 class="text-center">Ni hittar kontaktuppgifterna under respektive marknad 2020.</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -2412,7 +2423,8 @@
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                             <h4>Sekreterare</h4>
                             <p>Gunnel Levin<br>
-                                <a href="mailto:gunnel.levin@gmail.com">gunnel.levin@gmail.com</a></p>
+                                <a href="mailto:gunnel.levin@gmail.com">gunnel.levin@gmail.com</a>
+                            </p>
                         </div>
                     </div>
 
