Kontaktinformaton för Kivik, Tomelilla, Degeberga

--- a/index.html
+++ b/index.html
@@ -1998,11 +1998,9 @@
                                                 Gustafstorg 16<br>
                                                 273 80 Tomelilla</p>
                                             <hr class="invis">
-                                            <p>Carina Hansson<br>
-                                                Ros-Marie Stjernfeldt<br>
+                                            <p>Ros-Marie Stjernfeldt<br>
                                                 0417-18 117<br>
                                                 Fax 0417-144 00<br>
-                                                <a href="mailto:carina.hansson@tomelilla.se">carina.hansson@tomelilla.se</a><br>
                                                 <a href="mailto:ros-marie.stjernfelt@tomelilla.se">ros-marie.stjernfelt@tomelilla.se</a><br>
                                                 <a href="http://www.tomelilla.se/">www.tomelilla.se</a>
                                             </p>
@@ -2055,17 +2053,8 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Degeberga Marknad<br>
-                                                Gärds Härad Hembygdsförening<br>
-                                                Trollemöllavägen 25<br>
-                                                297 94 Degeberga</p>
-                                            <hr class="invis">
-                                            <p>Susanne Olsson<br>
-                                                044-35 06 57 kl 08-14<br>
-                                                0703-02 95 68</p>
-                                            <hr class="invis">
-                                            <p>
-                                                <a href="mailto:hembygdsforen.g@telia.com">hembygdsforen.g@telia.com</a><br>
-                                                <a href="http://www.hembygd.se/gards-harads">www.hembygd.se/gards-harads</a>
+                                                Per-Erik "Peje" Andersson<br>
+                                                <a href="mailto:peje@pejesva.se">peje@pejesva.se</a><br>
                                             </p>
                                         </div>
                                     </div>
@@ -2081,11 +2070,7 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Kiviks Marknad<br>
-                                                Marknadsevent i Sverige AB<br>
-                                                Kaggensgatan 16<br>
-                                                392 32 Kalmar<br>
-                                                0733-25 62 96</p>
-                                            <a href="mailto:kiviksmarknad@marknadsevent.se">kiviksmarknad@marknadsevent.se</a><br>
+                                            <a href="mailto:beach1@live.se">beach1@live.se</a><br>
                                             <a href="http://www.kiviksmarknad.com/">www.kiviksmarknad.com</a>
                                             </p>
                                         </div>
