ros-marie.stjernfeldt's email

--- a/index.html
+++ b/index.html
@@ -2001,7 +2001,7 @@
                                             <p>Ros-Marie Stjernfeldt<br>
                                                 0417-18 117<br>
                                                 Fax 0417-144 00<br>
-                                                <a href="mailto:ros-marie.stjernfelt@tomelilla.se">ros-marie.stjernfelt@tomelilla.se</a><br>
+                                                <a href="mailto:ros-marie.stjernfeldt@tomelilla.se">ros-marie.stjernfeldt@tomelilla.se</a><br>
                                                 <a href="http://www.tomelilla.se/">www.tomelilla.se</a>
                                             </p>
                                         </div>
