Marknaden i Åhus är inställd

--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 5/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong><!-- : 12-14/6 & 10-11/10 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong><!-- : 16/6 --></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong><!-- : 1-3/7 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>1-3/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 6/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 6-7/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: 8-10/7</button>
@@ -1665,7 +1665,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: 21-22/7 & 8-9/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: 11-12/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 16-19/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 27-28/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>27-28/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: 2-3/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 5-7/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 13-14/8</button>
@@ -2080,6 +2080,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Maria Magdalena Marknad, Åhus</h2>
+                                            <p>Marknaden är inställd 2022.</p>
                                             <hr class="invis">
                                             <p>Marknaden nystartade 1977 med anor från 1600-talet.</p>
                                         </div>
