--- a/index.html
+++ b/index.html
@@ -126,56 +126,56 @@
                                 <path d="M56.4,442.7c.5,.4,1.5,.8,1.5,1.5c-.3,0,-.1,-.5,-.5,-.2c-.5,-.3,-.9,-1.7,-1.9,-1l-1.3,-1.7c.2,-.1,.4,-.1,.5,-.1c.4,.7,.7,1.5,1.7,1.5Z" class="g0" />
                                 <path d="M56.4,442.7c.5,.4,1.5,.8,1.5,1.5c-.3,0,-.1,-.5,-.5,-.2c-.5,-.3,-.9,-1.7,-1.9,-1l-1.3,-1.7c.2,-.1,.4,-.1,.5,-.1c.4,.7,.7,1.5,1.7,1.5Z" class="g1" />
 
-                                <text x="295" y="302" class="s4">Broby</text>
-                                <text x="295" y="314" class="s4">4 juni</text>
-                                <text x="295" y="324" class="s4">3 sept</text>
-                                <text x="280" y="410" class="s4">Degeberga</text>
-                                <text x="280" y="422" class="s4">11-12 juli</text>
-                                <text x="160" y="424" class="s4">Eslöv</text>
-                                <!-- <text x="140" y="436" class="s4">30-31 maj</text>
-                                <text x="140" y="449" class="s4">26-27 sept</text> -->
-                                <text x="185" y="552" class="s4">Gislöv</text>
-                                <text x="185" y="562" class="s4">5-7 aug</text>
-                                <text x="274" y="275" class="s4">Hästveda 13-14 juli</text>
-                                <text x="216" y="420" class="s4">Hörby</text>
-                                <text x="211" y="432" class="s4">6-7 juli</text>
-                                <text x="246" y="386" class="s4">Höör</text>
-                                <text x="245" y="399" class="s4">13-14 aug</text>
-                                <text x="51" y="296" class="s4">Jonstorp</text>
-                                <!-- <text x="51" y="308" class="s4">1-3 juli</text> -->
-                                <text x="309" y="451" class="s5">Kivik</text>
-                                <text x="292" y="463" class="s5">16-19 juli</text>
-                                <text x="142" y="315" class="s4">Åby Klippan </text>
-                                <!-- <text x="142" y="328" class="s4">16 juni</text> -->
-                                <text x="95" y="385" class="s4">Landskrona </text>
-                                <!-- <text x="100" y="398" class="s4">19-21 juni</text> -->
-                                <text x="115" y="507" class="s4">Limhamn </text>
-                                <text x="116" y="520" class="s4">24-26 juni</text>
-                                <text x="128" y="355" class="s4">Ljungbyhed </text>
-                                <!-- <text x="132" y="369" class="s4">21-22 aug</text> -->
-                                <text x="305" y="490" class="s4">Lövestad</text>
-                                <!-- <text x="305" y="501" class="s4">5 april, 6 sept</text> -->
-                                <text x="403" y="256" class="s4">Ronneby</text>
-                                <text x="403" y="268" class="s4">8-10 juli</text>
-                                <text x="188" y="370" class="s4">Röstånga</text>
-                                <text x="189" y="383" class="s4">23-24 juli</text>
-                                <text x="232" y="483" class="s4">Sjöbo</text>
-                                <text x="180" y="495" class="s4">21-22 juli, 8-9 okt</text>
-                                <text x="198" y="517" class="s4">Skurup</text>
-                                <!-- <text x="188" y="529" class="s4">12-14 juni, 10-11 okt</text> -->
-                                <text x="358" y="316" class="s4">Sölvesborg</text>
-                                <!-- <text x="358" y="327" class="s4">1 juli, 3 okt</text> --><text x="388" y="327" class="s4">6 juli</text>
-                                <text x="308" y="521" class="s4">Tomelilla</text>
-                                <text x="309" y="532" class="s4">21 juli</text>
-                                <text x="310" y="544" class="s4">27 okt</text>
-                                <text x="125" y="551" class="s4">Trelleborg</text>
-                                <!-- <text x="127" y="561" class="s4">28-29 aug</text> -->
-                                <text x="278" y="345" class="s4">Vinslöv</text>
-                                <text x="278" y="356" class="s4">5 juni</text>
-                                <text x="107" y="286" class="s4">Torparedagar</text>
-                                <text x="107" y="300" class="s4">Åstorp 2-3 juli</text>
-                                <text x="325" y="374" class="s4">Åhus</text>
-                                <text x="319" y="385" class="s4">27-28 juli</text>
+                                <text x="295" y="302" class="s4" onclick="openCategory(event, 'marknad-broby')">Broby</text>
+                                <text x="295" y="314" class="s4" onclick="openCategory(event, 'marknad-broby')">4 juni</text>
+                                <text x="295" y="324" class="s4" onclick="openCategory(event, 'marknad-broby')">3 sept</text>
+                                <text x="280" y="410" class="s4" onclick="openCategory(event, 'marknad-degeberga')">Degeberga</text>
+                                <text x="280" y="422" class="s4" onclick="openCategory(event, 'marknad-degeberga')">11-12 juli</text>
+                                <text x="160" y="424" class="s4" onclick="openCategory(event, 'marknad-eslov')">Eslöv</text>
+                                <!-- <text x="140" y="436" class="s4" onclick="openCategory(event, 'marknad-eslov')">30-31 maj</text>
+                                <text x="140" y="449" class="s4" onclick="openCategory(event, 'marknad-eslov')">26-27 sept</text> -->
+                                <text x="185" y="552" class="s4" onclick="openCategory(event, 'marknad-gislov')">Gislöv</text>
+                                <text x="185" y="562" class="s4" onclick="openCategory(event, 'marknad-gislov')">5-7 aug</text>
+                                <text x="274" y="275" class="s4" onclick="openCategory(event, 'marknad-hastveda')">Hästveda 13-14 juli</text>
+                                <text x="216" y="420" class="s4" onclick="openCategory(event, 'marknad-horby')">Hörby</text>
+                                <text x="211" y="432" class="s4" onclick="openCategory(event, 'marknad-horby')">6-7 juli</text>
+                                <text x="246" y="386" class="s4" onclick="openCategory(event, 'marknad-hoor')">Höör</text>
+                                <text x="245" y="399" class="s4" onclick="openCategory(event, 'marknad-hoor')">13-14 aug</text>
+                                <text x="51" y="296" class="s4" onclick="openCategory(event, 'marknad-jonstorp')">Jonstorp</text>
+                                <!-- <text x="51" y="308" class="s4" onclick="openCategory(event, 'marknad-jonstorp')">1-3 juli</text> -->
+                                <text x="309" y="451" class="s4" onclick="openCategory(event, 'marknad-kivik')">Kivik</text>
+                                <text x="292" y="463" class="s4" onclick="openCategory(event, 'marknad-kivik')">16-19 juli</text>
+                                <text x="142" y="315" class="s4" onclick="openCategory(event, 'marknad-klippan')">Åby Klippan </text>
+                                <!-- <text x="142" y="328" class="s4" onclick="openCategory(event, 'marknad-klippan')">16 juni</text> -->
+                                <text x="95" y="385" class="s4" onclick="openCategory(event, 'marknad-landskrona')">Landskrona </text>
+                                <!-- <text x="100" y="398" class="s4" onclick="openCategory(event, 'marknad-landskrona')">19-21 juni</text> -->
+                                <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
+                                <text x="116" y="520" class="s4" onclick="openCategory(event, 'marknad-limhamn')">24-26 juni</text>
+                                <text x="128" y="355" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">Ljungbyhed </text>
+                                <!-- <text x="132" y="369" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">21-22 aug</text> -->
+                                <text x="305" y="490" class="s4" onclick="openCategory(event, 'marknad-lovestad')">Lövestad</text>
+                                <!-- <text x="305" y="501" class="s4" onclick="openCategory(event, 'marknad-lovestad')">5 april, 6 sept</text> -->
+                                <text x="403" y="256" class="s4" onclick="openCategory(event, 'marknad-ronneby')">Ronneby</text>
+                                <text x="403" y="268" class="s4" onclick="openCategory(event, 'marknad-ronneby')">8-10 juli</text>
+                                <text x="188" y="370" class="s4" onclick="openCategory(event, 'marknad-rostanga')">Röstånga</text>
+                                <text x="189" y="383" class="s4" onclick="openCategory(event, 'marknad-rostanga')">23-24 juli</text>
+                                <text x="232" y="483" class="s4" onclick="openCategory(event, 'marknad-sjobo')">Sjöbo</text>
+                                <text x="180" y="495" class="s4" onclick="openCategory(event, 'marknad-sjobo')">21-22 juli, 8-9 okt</text>
+                                <text x="198" y="517" class="s4" onclick="openCategory(event, 'marknad-skurup')">Skurup</text>
+                                <!-- <text x="188" y="529" class="s4" onclick="openCategory(event, 'marknad-skurup')">12-14 juni, 10-11 okt</text> -->
+                                <text x="358" y="316" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">Sölvesborg</text>
+                                <!-- <text x="358" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">1 juli, 3 okt</text> --><text x="388" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">6 juli</text>
+                                <text x="308" y="521" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">Tomelilla</text>
+                                <text x="309" y="532" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">21 juli</text>
+                                <text x="310" y="544" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">27 okt</text>
+                                <text x="125" y="551" class="s4" onclick="openCategory(event, 'marknad-trelleborg')">Trelleborg</text>
+                                <!-- <text x="127" y="561" class="s4" onclick="openCategory(event, 'marknad-trelleborg')">28-29 aug</text> -->
+                                <text x="278" y="345" class="s4" onclick="openCategory(event, 'marknad-vinslov')">Vinslöv</text>
+                                <text x="278" y="356" class="s4" onclick="openCategory(event, 'marknad-vinslov')">5 juni</text>
+                                <text x="107" y="286" class="s4" onclick="openCategory(event, 'marknad-astorp')">Torparedagar</text>
+                                <text x="107" y="300" class="s4" onclick="openCategory(event, 'marknad-astorp')">Åstorp 2-3 juli</text>
+                                <text x="325" y="374" class="s4" onclick="openCategory(event, 'marknad-ahus')">Åhus</text>
+                                <text x="319" y="385" class="s4" onclick="openCategory(event, 'marknad-ahus')">27-28 juli</text>
 
                                 <text x="79" y="629" dx="0,0,0,-.9,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,-1.7,0,0,0" class="s6">www.skanskamarknader.com</text>
                                 <path d="M63.9,287.7c1.9,0,3.5,-1.6,3.5,-3.5c0,-1.9,-1.6,-3.4,-3.5,-3.4c-1.9,0,-3.5,1.5,-3.5,3.4c0,1.9,1.6,3.5,3.5,3.5Z" class="g2" />
