Anders Strand kontaktperson Vinslöv

--- a/index.html
+++ b/index.html
@@ -1777,12 +1777,8 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Ronny Nilsson<br>
-                                                Trebackalånggatan 38<br>
-                                                281 42 Hässleholm<br>
-                                                0708-884 229<br>
-                                                <a href="mailto:ronny.hassan@telia.com">ronny.hassan@telia.com</a><br>
-                                                <a href="https://www.hassans.se/">www.hassans.se</a>
+                                            <p>Anders Strand<br>
+                                                <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
                                             </p>
                                         </div>
                                     </div>
