--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
                                 <text x="116" y="520" class="s4" onclick="openCategory(event, 'marknad-limhamn')">24-26 juni</text>
                                 <text x="128" y="355" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">Ljungbyhed </text>
-                                <!-- <text x="132" y="369" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">21-22 aug</text> -->
+                                <text x="132" y="369" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">19-20 aug</text>
                                 <text x="305" y="490" class="s4" onclick="openCategory(event, 'marknad-lovestad')">Lövestad</text>
                                 <!-- <text x="305" y="501" class="s4" onclick="openCategory(event, 'marknad-lovestad')">5 april, 6 sept</text> -->
                                 <text x="403" y="256" class="s4" onclick="openCategory(event, 'marknad-ronneby')">Ronneby</text>
@@ -162,7 +162,7 @@
                                 <text x="232" y="483" class="s4" onclick="openCategory(event, 'marknad-sjobo')">Sjöbo</text>
                                 <text x="180" y="495" class="s4" onclick="openCategory(event, 'marknad-sjobo')">21-22 juli, 8-9 okt</text>
                                 <text x="198" y="517" class="s4" onclick="openCategory(event, 'marknad-skurup')">Skurup</text>
-                                <!-- <text x="188" y="529" class="s4" onclick="openCategory(event, 'marknad-skurup')">12-14 juni, 10-11 okt</text> -->
+                                <text x="188" y="529" class="s4" onclick="openCategory(event, 'marknad-skurup')">10-12 juni, 8-9 okt</text>
                                 <text x="358" y="316" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">Sölvesborg</text>
                                 <!-- <text x="358" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">1 juli, 3 okt</text> --><text x="388" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">6 juli</text>
                                 <text x="308" y="521" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">Tomelilla</text>
@@ -1654,7 +1654,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong><!-- : 30-31/5 & 26-27/9 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 4/6 & 3/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 5/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong><!-- : 12-14/6 & 10-11/10 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 10-12/6 & 8-9/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong><!-- : 16/6 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>1-3/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 6/7</button>
@@ -1669,7 +1669,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: 2-3/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 5-7/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 13-14/8</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong><!-- : 21-22/8 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 19-20/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong><!-- : 28-29/8 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong><!-- : 19-21/6 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: 24-26/6</button>
@@ -2192,8 +2192,8 @@
                                             <h2>Ljungbyheds Gammelmarknad</h2>
                                             <img src="images/ljungbyhed_logo.gif" alt="Ljungbyheds Gammelmarknad logga">
                                             <hr class="invis">
-                                            <p>Fredag 21 augusti kl 12.00-20.00<br>
-                                                Lördag 22 augusti kl 9.00-18-00</p>
+                                            <p>Fredag 19 augusti kl 12.00-20.00<br>
+                                                Lördag 20 augusti kl 9.00-18-00</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -2207,7 +2207,7 @@
                                             <hr class="invis">
                                             <p>Jimmy Ahlberg<br>
                                                 <a href="mailto:gammelmarknad@ljungbyhed.nu">gammelmarknad@ljungbyhed.nu</a><br>
-                                                0733-11 74 89
+                                                0722 06 96 32
                                             </p>
                                         </div>
                                     </div>
